--- a/index.html
+++ b/index.html
@@ -142,7 +142,14 @@
             <h1>Economize <span>Tempo</span> e <span>Dinheiro</span> com Inteligência Artificial</h1>
             <p>Pare de desperdiçar incontáveis horas ou gastar dinheiro contratando funcionários para realizar tarefas
                 repetitivas. O futuro chegou, não seja deixado para trás.</p>
+
             <a href="#contato" class="button">Fale com o Nosso Time</a>
+
+            <!-- <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+
+            <a href=""
+                onclick="Calendly.initPopupWidget({url: 'https://calendly.com/cronus-agencia/consultoria'});return false;"
+                class="button">Fale com o Nosso Time</a> -->
             <img src="./assets/home-graph.png" alt="">
         </div>
     </section>
@@ -215,27 +222,28 @@
                     <div class="texts">
                         <div class="text">
                             <img src="./assets/verificado-icon.png" alt="">
-                            <p>Chatbot Inteligente para atendimento ao cliente e agendamentos.</p>
+                            <p>Treinamento no uso de IAs de forma simples e produtiva</p>
                         </div>
                         <div class="text">
                             <img src="./assets/verificado-icon.png" alt="">
-                            <p>Chatbot Inteligente para atendimento ao cliente e agendamentos.</p>
+                            <p>Automação de captura de leads e respostas de email.</p>
                         </div>
                         <div class="text">
                             <img src="./assets/verificado-icon.png" alt="">
-                            <p>Chatbot Inteligente para atendimento ao cliente e agendamentos.</p>
+                            <p>Automações internas na sua rotina de trabalho feitas sob medida para você.</p>
                         </div>
                         <div class="text">
                             <img src="./assets/verificado-icon.png" alt="">
-                            <p>Chatbot Inteligente para atendimento ao cliente e agendamentos.</p>
+                            <p>Bot inteligente que auxilia você e seus funcionários no dia a dia.</p>
                         </div>
                         <div class="text">
                             <img src="./assets/verificado-icon.png" alt="">
-                            <p>Chatbot Inteligente para atendimento ao cliente e agendamentos.</p>
+                            <p>Bot para treinar novos funcionários e sanar as dúvidas.</p>
                         </div>
                         <div class="text">
                             <img src="./assets/verificado-icon.png" alt="">
-                            <p>Chatbot Inteligente para atendimento ao cliente e agendamentos.</p>
+                            <p>Assistente virtual para atas de reuniões, que sintetiza os pontos discutidos e os
+                                compromissos assumidos.</p>
                         </div>
                     </div>
                 </div>
@@ -253,16 +261,22 @@
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <p>“O chatbot aumentou em 10x nossa capacidade de atendimento aos clientes.”</p>
-                        <p>-Alexandre Koch</p>
+                        <p>“Super didáticos, eu que não entendo nada das tecnologias consegui entender todo o processo.”
+                        </p>
+                        <p>-Claudia Marcia</p>
                     </div>
                     <div class="swiper-slide">
-                        <p>“O chatbot aumentou em 10x nossa capacidade de atendimento aos clientes.”</p>
-                        <p>-Marcos Koch</p>
+                        <p>“eliminaram muitas tarefas repetitivas da nossa rotina, não consigo mais viver sem.”</p>
+                        <p>-Elis Fonseca</p>
                     </div>
                     <div class="swiper-slide">
-                        <p>“O chatbot aumentou em 10x nossa capacidade de atendimento aos clientes.”</p>
-                        <p>-Junior Koch</p>
+                        <p>“Confesso que tive uma resistência em mudar o jeito que trabalhava, mas a transição foi super
+                            tranquila, nos adaptamos e tá sendo incrível.”</p>
+                        <p>-Junior Colombo</p>
+                    </div>
+                    <div class="swiper-slide">
+                        <p>“O chat aumentou em 50 vezes nossa capacidade de atendimento.”</p>
+                        <p>-Carlos Ferreira</p>
                     </div>
                 </div>
                 <div class="arrows">
@@ -300,9 +314,8 @@
             <h2>Reunião Estratégica <span>Gratuita</span></h2>
             <img src="./assets/foto-ruan-circular.png" alt="">
             <h4>AGENDE SUA REUNIÃO COM RUAN</h4>
-            <p>Nesta chamada sem compromisso, iremos elaborar estratégias de automação com IA a fim de impulsionar o
-                crescimento da sua empresa e melhorar a experiência do cliente.
-
+            <p>Nesta chamada sem compromisso, iremos elaborar estratégias a fim de impulsionar o
+                a produtividade e crescimento da sua empresa, e também melhorar a experiência do seu cliente. <br> <br>
                 Basta encontrar um horário que se adeque à sua agenda. Estamos ansiosos para falar com você.</p>
 
             <!-- Calendly inline widget begin -->
@@ -322,7 +335,8 @@
                     </div>
                     <div class="text">
                         <img src="./assets/verificado-icon.png" alt="">
-                        <p>Empresas buscando economizar muito dinheiro com IAs diminuindo o quadro de funcionários.</p>
+                        <p>Empresas buscando economizar muito dinheiro com IAs, sem a necessidade de vários
+                            funcionários.</p>
                     </div>
                     <div class="text">
                         <img src="./assets/verificado-icon.png" alt="">
@@ -395,11 +409,11 @@
                 <a href="#">
                     <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
-                            d="M19.3883 0H20.5891C25.4957 0 30.1441 2.06365 34.5342 6.19094C37.6202 9.89656 39.3181 13.2508 39.628 16.2536C39.8604 17.672 39.9766 18.5728 39.9766 18.9562V20.5854C39.9766 23.2176 39.0728 26.2652 37.2651 29.728C34.631 33.9959 30.8801 36.9604 26.0122 38.6215C23.546 39.2476 21.6156 39.5607 20.2211 39.5607H19.7563C14.656 39.5607 9.92369 37.529 5.5594 33.4656C1.85362 29.4022 0.000732422 24.6807 0.000732422 19.3012V19.0712C0.000732422 18.8923 0.0394688 18.7389 0.116941 18.6112C0.116941 18.5217 0.0782051 18.477 0.000732422 18.477C0.504305 14.6691 1.53082 11.5897 3.08027 9.2385C5.53357 5.29009 9.31682 2.47893 14.43 0.805014C16.341 0.268338 17.9938 0 19.3883 0ZM16.6767 12.6311L16.7929 16.2536C16.7929 16.3686 16.6767 16.49 16.4443 16.6178H14.43V20.7004H16.4443C16.5605 20.7004 16.6767 20.8218 16.7929 21.0645V31.1272L16.851 31.8364H21.0539V20.9495C21.0798 20.7834 21.1572 20.7004 21.2864 20.7004H24.7145C24.8695 20.7004 25.0696 19.4162 25.3149 16.8478V16.6178H21.2864C21.1314 16.6178 21.0539 16.5411 21.0539 16.3878V13.5702C21.0539 12.3691 21.7641 11.7047 23.1844 11.5769H25.5473V8.06931C25.5473 7.83931 24.721 7.7243 23.0682 7.7243H22.4678C19.7434 7.7243 17.9679 8.73377 17.1416 10.7527C16.9866 11.1744 16.8317 11.8005 16.6767 12.6311Z"
+                            d="M19.4 0H20.6015C25.5111 0 30.1622 2.08656 34.555 6.25969C37.6429 10.0065 39.3418 13.3979 39.6519 16.4341C39.8845 17.8682 40.0007 18.7791 40.0007 19.1667V20.814C40.0007 23.4755 39.0963 26.5568 37.2876 30.0581C34.6519 34.3734 30.8987 37.3708 26.0279 39.0504C23.5602 39.6835 21.6286 40 20.2333 40H19.7682C14.6648 40 9.92967 37.9457 5.56275 33.8372C1.85474 29.7287 0.000732422 24.9548 0.000732422 19.5155V19.2829C0.000732422 19.1021 0.0394921 18.947 0.117011 18.8178C0.117011 18.7274 0.0782518 18.6822 0.000732422 18.6822C0.504608 14.832 1.53174 11.7183 3.08213 9.34109C5.53691 5.34884 9.32244 2.50646 14.4387 0.813953C16.3509 0.271318 18.0046 0 19.4 0ZM16.6868 12.7713L16.8031 16.4341C16.8031 16.5504 16.6868 16.6731 16.4542 16.8023H14.4387V20.9302H16.4542C16.5705 20.9302 16.6868 21.053 16.8031 21.2984V31.4729L16.8612 32.1899H21.0666V21.1822C21.0925 21.0142 21.17 20.9302 21.2992 20.9302H24.7294C24.8845 20.9302 25.0847 19.6318 25.3302 17.0349V16.8023H21.2992C21.1441 16.8023 21.0666 16.7248 21.0666 16.5698V13.7209C21.0666 12.5065 21.7772 11.8346 23.1984 11.7054H25.5627V8.15891C25.5627 7.92636 24.7359 7.81008 23.0821 7.81008H22.4814C19.7553 7.81008 17.9788 8.83075 17.1519 10.8721C16.9969 11.2984 16.8418 11.9315 16.6868 12.7713Z"
                             fill="url(#paint0_linear_2636_246)" />
                         <defs>
-                            <linearGradient id="paint0_linear_2636_246" x1="-12.3252" y1="68.9015" x2="62.1986"
-                                y2="65.3788" gradientUnits="userSpaceOnUse">
+                            <linearGradient id="paint0_linear_2636_246" x1="-12.3326" y1="69.6667" x2="62.2395"
+                                y2="66.1782" gradientUnits="userSpaceOnUse">
                                 <stop stop-color="#0098D9" />
                                 <stop offset="1" stop-color="#33CC33" />
                             </linearGradient>
@@ -408,13 +422,14 @@
                 </a>
 
                 <a href="#">
-                    <svg width="40" height="41" viewBox="0 0 40 41" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="20" cy="20" r="20" fill="url(#paint0_linear_2765_156)" />
                         <path
-                            d="M19.3964 0H20.1922C24.5377 0 28.7316 1.72268 32.7739 5.16805C37.0688 9.70488 39.2163 14.4653 39.2163 19.4492V21.3823C39.2163 24.2754 38.1425 27.6747 35.9951 31.5803C33.3423 35.5254 29.7295 38.2475 25.1567 39.7466C23.0345 40.2989 21.266 40.5751 19.8512 40.5751H19.7375C14.4446 40.5751 9.71386 38.4184 5.54525 34.1052C2.00825 29.8971 0.239746 25.2945 0.239746 20.2974C0.239746 14.9584 2.24194 10.0731 6.24634 5.64146C10.4149 1.88049 14.7983 0 19.3964 0ZM20.5522 16.806V17.7726C20.5522 17.9304 20.4701 18.0093 20.3059 18.0093C17.8932 17.6674 15.8215 16.7863 14.0909 15.3661L12.4803 13.8078H12.3477C12.3477 13.9393 12.1961 14.2614 11.8929 14.7743V16.2143C11.994 17.0296 12.5308 17.9501 13.5035 18.9758V19.0942C12.973 19.0942 12.4361 18.9364 11.8929 18.6207V18.7391C11.8929 20.2777 12.853 21.5993 14.773 22.7039L14.5457 22.8223H13.9772L13.3898 22.7039V22.9406C14.2741 24.6238 15.392 25.4655 16.7437 25.4655V25.8205C15.2278 26.7805 13.7246 27.2605 12.234 27.2605H11.5518V27.4972C13.7246 28.536 15.6068 29.0555 17.1984 29.0555C20.5333 29.0555 23.3755 27.655 25.7251 24.854C27.4178 22.408 28.2642 20.087 28.2642 17.8909V17.0624C29.4895 15.8395 30.1085 15.1557 30.1211 15.011V14.8927C29.679 15.1294 29.06 15.3332 28.2642 15.5041L28.1505 15.2477C28.8705 14.8138 29.4074 14.2154 29.7611 13.4527V13.3343H29.6474C28.5105 13.8998 27.8221 14.1825 27.582 14.1825H27.241C26.3946 13.4593 25.6241 13.0582 24.9293 12.9793H24.0008C22.7123 12.9793 21.6765 13.7354 20.8933 15.2477C20.6659 15.6422 20.5522 16.1617 20.5522 16.806Z"
-                            fill="url(#paint0_linear_2636_247)" />
+                            d="M25.8463 13.4238H14.1537C11.8597 13.4238 10 15.2835 10 17.5776V23.4226C10 25.7166 11.8597 27.5763 14.1537 27.5763H25.8463C28.1403 27.5763 30 25.7166 30 23.4226V17.5776C30 15.2835 28.1403 13.4238 25.8463 13.4238ZM23.0371 20.7845L17.5681 23.3928C17.4224 23.4623 17.2541 23.3561 17.2541 23.1947V17.8149C17.2541 17.6512 17.4268 17.545 17.5729 17.619L23.0418 20.3905C23.2044 20.4728 23.2016 20.706 23.0371 20.7845Z"
+                            fill="white" />
                         <defs>
-                            <linearGradient id="paint0_linear_2636_247" x1="-11.778" y1="70.6683" x2="60.8983"
-                                y2="67.4025" gradientUnits="userSpaceOnUse">
+                            <linearGradient id="paint0_linear_2765_156" x1="-12.3333" y1="69.6667" x2="62.2388"
+                                y2="66.1782" gradientUnits="userSpaceOnUse">
                                 <stop stop-color="#0098D9" />
                                 <stop offset="1" stop-color="#33CC33" />
                             </linearGradient>
@@ -424,13 +439,13 @@
                 </a>
 
                 <a href="#">
-                    <svg width="41" height="41" viewBox="0 0 41 41" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="41" height="40" viewBox="0 0 41 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
-                            d="M19.0432 0H21.8917C24.9404 0 28.409 1.28215 32.2974 3.84645C35.2299 6.17404 37.355 8.86327 38.6727 11.9141C39.8612 14.8203 40.4554 17.2728 40.4554 19.2717V20.9483C40.4554 25.4457 38.6404 29.9037 35.0103 34.3221C30.7989 38.4908 25.9093 40.5751 20.3415 40.5751C13.3914 40.5751 7.71378 37.2809 3.30862 30.6927C1.42253 27.1421 0.479492 23.6507 0.479492 20.2185C0.479492 14.5639 2.76604 9.46818 7.33915 4.93134C11.6022 1.64378 15.5036 0 19.0432 0ZM9.81948 17.5753V23.848C9.81948 27.267 10.8852 29.5486 13.0168 30.6927C13.9727 31.245 17.0473 31.4488 22.2405 31.3042C26.2193 31.3042 28.5059 30.8636 29.1001 29.9826C30.4437 28.8911 31.1154 27.0829 31.1154 24.5581V16.4904C31.1154 13.308 30.0109 11.2237 27.8018 10.2375L26.3292 9.74433L24.8371 9.62598H16.2141C13.1395 9.62598 11.0855 11.1514 10.052 14.2023C9.89699 15.1359 9.81948 16.2603 9.81948 17.5753ZM16.5629 11.5591H24.8371C27.8341 11.5591 29.3327 13.1634 29.3327 16.3721V24.9131C28.9322 27.8851 27.7114 29.3711 25.6703 29.3711H22.2405C20.6386 29.3711 18.9463 29.4105 17.1636 29.4894C14.1923 29.4894 12.4548 28.5295 11.951 26.6095C11.796 25.5444 11.7185 23.94 11.7185 21.7965V19.1336C11.7185 15.1228 12.035 13.1174 12.668 13.1174C13.301 12.0785 14.5993 11.5591 16.5629 11.5591ZM24.9533 14.8138C25.3021 15.6159 25.7414 16.017 26.271 16.017C26.8007 16.017 27.2334 15.6159 27.5693 14.8138C27.3885 13.8406 26.9105 13.3541 26.1354 13.3541C25.3474 13.6039 24.9533 14.0905 24.9533 14.8138ZM15.032 20.5933C15.032 23.1839 16.4918 24.9855 19.4114 25.998H21.7754C24.6046 24.9592 26.0191 23.1181 26.0191 20.4749V20.2185C26.0191 18.7194 25.2698 17.3189 23.7713 16.017C22.7508 15.2937 21.6915 14.9321 20.5934 14.9321H20.4771C18.0356 14.9321 16.3368 16.2143 15.3808 18.7786C15.2517 18.9495 15.1354 19.5544 15.032 20.5933ZM20.4771 16.8455H20.5934C22.2986 16.8455 23.4419 17.7726 24.0232 19.6267C24.1007 19.7319 24.1395 20.0147 24.1395 20.4749C23.7649 22.9603 22.5828 24.203 20.5934 24.203C19.0174 24.203 17.8741 23.4009 17.1636 21.7965C17.0602 21.665 16.9763 21.2639 16.9117 20.5933C17.1959 18.0947 18.3844 16.8455 20.4771 16.8455Z"
+                            d="M19.0544 0H21.9046C24.9552 0 28.4259 1.26398 32.3166 3.79193C35.2509 6.08653 37.3772 8.73764 38.6957 11.7453C39.8849 14.6103 40.4795 17.028 40.4795 18.9985V20.6514C40.4795 25.0851 38.6634 29.4798 35.0311 33.8357C30.8172 37.9452 25.9246 40 20.3535 40C13.3992 40 7.71814 36.7526 3.31032 30.2577C1.4231 26.7574 0.479492 23.3155 0.479492 19.9319C0.479492 14.3575 2.76742 9.33398 7.34328 4.86145C11.6089 1.62048 15.5126 0 19.0544 0ZM9.82511 17.3262V23.51C9.82511 26.8806 10.8915 29.1298 13.0243 30.2577C13.9809 30.8021 17.0573 31.0031 22.2536 30.8605C26.2349 30.8605 28.5228 30.4262 29.1174 29.5576C30.4617 28.4816 31.1339 26.6991 31.1339 24.21V16.2567C31.1339 13.1194 30.0287 11.0647 27.8183 10.0924L26.3447 9.60622L24.8518 9.48955H16.2236C13.1471 9.48955 11.0919 10.9934 10.0578 14.001C9.90266 14.9214 9.82511 16.0298 9.82511 17.3262ZM16.5726 11.3952H24.8518C27.8506 11.3952 29.3501 12.9768 29.3501 16.14V24.56C28.9494 27.4899 27.7278 28.9548 25.6855 28.9548H22.2536C20.6508 28.9548 18.9574 28.9937 17.1736 29.0715C14.2006 29.0715 12.462 28.1251 11.9579 26.2324C11.8028 25.1823 11.7253 23.6007 11.7253 21.4876V18.8624C11.7253 14.9084 12.0419 12.9315 12.6753 12.9315C13.3087 11.9073 14.6078 11.3952 16.5726 11.3952ZM24.9681 14.6038C25.3171 15.3946 25.7566 15.79 26.2866 15.79C26.8165 15.79 27.2496 15.3946 27.5856 14.6038C27.4047 13.6445 26.9264 13.1648 26.1508 13.1648C25.3624 13.4111 24.9681 13.8908 24.9681 14.6038ZM15.0408 20.3014C15.0408 22.8553 16.5015 24.6313 19.4228 25.6296H21.7883C24.6191 24.6054 26.0345 22.7905 26.0345 20.1847V19.9319C26.0345 18.4541 25.2848 17.0734 23.7854 15.79C22.7642 15.077 21.7042 14.7205 20.6055 14.7205H20.4892C18.0461 14.7205 16.3464 15.9844 15.3898 18.5124C15.2606 18.6809 15.1442 19.2773 15.0408 20.3014ZM20.4892 16.6067H20.6055C22.3118 16.6067 23.4557 17.5207 24.0374 19.3486C24.115 19.4523 24.1538 19.731 24.1538 20.1847C23.7789 22.6349 22.5962 23.86 20.6055 23.86C19.0285 23.86 17.8846 23.0692 17.1736 21.4876C17.0702 21.358 16.9862 20.9626 16.9216 20.3014C17.2059 17.8383 18.3952 16.6067 20.4892 16.6067Z"
                             fill="url(#paint0_linear_2636_248)" />
                         <defs>
-                            <linearGradient id="paint0_linear_2636_248" x1="-11.8464" y1="70.6683" x2="62.6856"
-                                y2="67.2332" gradientUnits="userSpaceOnUse">
+                            <linearGradient id="paint0_linear_2636_248" x1="-11.8538" y1="69.6667" x2="62.7183"
+                                y2="66.1782" gradientUnits="userSpaceOnUse">
                                 <stop stop-color="#0098D9" />
                                 <stop offset="1" stop-color="#33CC33" />
                             </linearGradient>
