--- a/ebook-newsletter.html
+++ b/ebook-newsletter.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./assets/favicon-colorido.svg" type="image/x-icon">
 </head>
-<body id="body" class="" onscroll="onScroll()">
+<body onscroll="onScroll()">
     <header id="navigationBar" class="">
         <div class="wrapper">
             <div class="logo-name">
@@ -44,19 +44,19 @@
             <div class="menu">
                 <ul class="options">
                     <li><a onclick="closeMenu()" href="index.html">Início</a></li>
-                    <li><a onclick="closeMenu()" href="#home">Sobre</a></li>
+                    <li><a onclick="closeMenu()" href="sobre.html">Sobre</a></li>
                     <li><a onclick="closeMenu()" href="https://cronus-ia.blog">Artigos</a></li>
-                    <li><a onclick="closeMenu()" href="ebook-newsletter.html">Ebook Grátis</a></li>
+                    <li><a onclick="closeMenu()" href="#newsletter-ebook">Ebook Grátis</a></li>
                     <li><a onclick="closeMenu()" href="#newsletter-ebook">Newsletter</a></li>
                 </ul>
 
-                <a class="button" onclick="closeMenu()" href="#contato">
+                <a class="button" onclick="closeMenu()" href="index.html#contato">
                     FALE COM O NOSSO TIME
                 </a>
 
                 <ul class="social-links">
                     <li>
-                        <a target="_blank" href="https://www.instagram.com/cronus.ai/">
+                        <a target="_blank" href="https://www.instagram.com/cronus.ai">
                             <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M21.25 2.49997H8.75C5.29822 2.49997 2.5 5.29819 2.5 8.74997V21.25C2.5 24.7017 5.29822 27.5 8.75 27.5H21.25C24.7018 27.5 27.5 24.7017 27.5 21.25V8.74997C27.5 5.29819 24.7018 2.49997 21.25 2.49997Z" stroke="url(#paint0_linear_1729_406)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 <path d="M19.9996 14.2126C20.1539 15.2529 19.9762 16.3153 19.4918 17.2488C19.0075 18.1823 18.2411 18.9393 17.3017 19.4122C16.3623 19.885 15.2977 20.0496 14.2594 19.8825C13.221 19.7154 12.2618 19.2252 11.5182 18.4815C10.7745 17.7379 10.2843 16.7787 10.1172 15.7403C9.95014 14.702 10.1147 13.6374 10.5875 12.698C11.0604 11.7586 11.8174 10.9922 12.7509 10.5079C13.6844 10.0235 14.7468 9.84581 15.7871 10.0001C16.8483 10.1574 17.8307 10.6519 18.5893 11.4105C19.3478 12.169 19.8423 13.1514 19.9996 14.2126Z" stroke="url(#paint1_linear_1729_406)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -151,31 +151,33 @@
         </div>
     </header>
     
-    <section id="home">
-        <div class="wrapper">
-            <h1>Sobre <span>Nós</span></h1>
-            <p style="margin-top: 2rem;">A Cronus é uma agência especializada em automação de tarefas através da inteligência artificial. Nossa equipe de especialistas combina conhecimentos em IA, análise de dados e automação para criar soluções exclusivas. Com ferramentas de ponta e inovadoras, ajudamos as empresas a otimizar processos, reduzir custos e economizar incontáveis horas. Estamos totalmente comprometidos em fazer sua empresa prosperar e cuidar dela como se fosse uma parte valiosa de nossa própria família empresarial.</p>
-        </div>
-    </section>
-
     <section id="newsletter-ebook">
         <div class="wrapper">
-            <div class="container">
-                <h2>Inscreva-se na nossa <span>Newsletter</span> e ganhe um <span>eBook</span> grátis</h2>
-                <p>Acompanhe como a IA está revolucionando diversos setores e trazendo impactos significativos para as
+            <div style="background: none;" class="container">
+                <h2 style="color: var(--gray-headline);">Inscreva-se na nossa <span>Newsletter</span> e ganhe um <span>eBook</span> grátis</h2>
+                <p style="color: var(--gray-headline);">Acompanhe como a IA está revolucionando diversos setores e trazendo impactos significativos para as
                     empresas.</p>
                 <form action="" method="get">
-                    <div class="input-card">
+                    <div style="background: linear-gradient(var(--white), var(--white)) padding-box, linear-gradient(to right, var(--primary-blue), var(--primary-green)) border-box;
+                    border: 0.2rem solid transparent;
+                    border-radius: 1rem;" class="input-card">
                         <img src="./assets/nome-input-icon.png" alt="">
                         <input type="text" class="input-text" name="nome" id="nome" placeholder="Primeiro Nome">
                     </div>
 
-                    <div class="input-card">
+                    <div style="background: linear-gradient(var(--white), var(--white)) padding-box, linear-gradient(to right, var(--primary-blue), var(--primary-green)) border-box;
+                    border: 0.2rem solid transparent;
+                    border-radius: 1rem;" class="input-card">
                         <img src="./assets/email-input-icon.png" alt="">
                         <input type="email" class="input-text" name="email" id="email" placeholder="Email">
                     </div>
                     <input type="submit" value="Inscreva-se" id="submit">
+                    <input style="background: var(--gray-headline);" type="submit" value="Baixar apenas eBook" id="submit">
                 </form>
+
+                <p style="color: var(--gray-headline); margin-top: 3rem;">E junte-se a <b>5.000+</b> inscritos</p>
+
+                <img style="margin-top: 3rem;" src="./assets/mockup ebook.png" alt="">
             </div>
         </div>
     </section>
