sobre, ebook finalizados

--- a/sobre.html
+++ b/sobre.html
@@ -153,8 +153,8 @@
     
     <section id="home">
         <div class="wrapper">
-            <h1>Sobre <span>Nós</span></h1>
-            <p style="margin-top: 2rem;">A Cronus é uma agência especializada em automação de tarefas através da inteligência artificial. Nossa equipe de especialistas combina conhecimentos em IA, análise de dados e automação para criar soluções exclusivas. Com ferramentas de ponta e inovadoras, ajudamos as empresas a otimizar processos, reduzir custos e economizar incontáveis horas. Estamos totalmente comprometidos em fazer sua empresa prosperar e cuidar dela como se fosse uma parte valiosa de nossa própria família empresarial.</p>
+            <h1 style="text-align: left; font-size: 4rem;">Sobre <span>Nós</span></h1>
+            <p style="margin-top: 2rem; text-align: left;">A Cronus é uma agência especializada em automação de tarefas através da inteligência artificial. Nossa equipe de especialistas combina conhecimentos em IA, análise de dados e automação para criar soluções exclusivas. Com ferramentas de ponta e inovadoras, ajudamos as empresas a otimizar processos, reduzir custos e economizar incontáveis horas. Estamos totalmente comprometidos em fazer sua empresa prosperar e cuidar dela como se fosse uma parte valiosa de nossa própria família empresarial.</p>
         </div>
     </section>
 
