blog section added, about changed

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <ul class="options">
                     <li><a onclick="closeMenu()" href="#home">Início</a></li>
                     <li><a onclick="closeMenu()" href="sobre.html">Sobre</a></li>
-                    <li><a onclick="closeMenu()" href="https://cronus-ia.blog">Artigos</a></li>
+                    <li><a onclick="closeMenu()" href="blog.html">Artigos</a></li>
                     <li><a onclick="closeMenu()" href="ebook-newsletter.html">Ebook Grátis</a></li>
                     <li><a onclick="closeMenu()" href="#newsletter-ebook">Newsletter</a></li>
                 </ul>
