--- a/sobre.html
+++ b/sobre.html
@@ -45,7 +45,7 @@
                 <ul class="options">
                     <li><a onclick="closeMenu()" href="index.html">Início</a></li>
                     <li><a onclick="closeMenu()" href="#home">Sobre</a></li>
-                    <li><a onclick="closeMenu()" href="https://cronus-ia.blog">Artigos</a></li>
+                    <li><a onclick="closeMenu()" href="blog.html">Artigos</a></li>
                     <li><a onclick="closeMenu()" href="ebook-newsletter.html">Ebook Grátis</a></li>
                     <li><a onclick="closeMenu()" href="#newsletter-ebook">Newsletter</a></li>
                 </ul>
@@ -158,6 +158,26 @@
         </div>
     </section>
 
+    <section id="nosso-time">
+        <div class="wrapper">
+            <h2>Conheça nosso <span>Time</span></h2>
+            <div class="members">
+                <div class="member">
+                    <img src="./assets/foto-ruan.png" alt="">
+                    <h3>Ruan Matos<br><span>CEO</span></h3>
+                </div>
+                <div class="member">
+                    <img src="./assets/foto-alexandre.png" alt="">
+                    <h3>Aleandre Koch<br><span>CTO/Engenheiro de Prompt</span></h3>
+                </div>
+                <div class="member">
+                    <img src="./assets/foto-thyago.png" alt="">
+                    <h3>Thyago Monnerat<br><span>Desenvolvedor de Chatbot</span></h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="newsletter-ebook">
         <div class="wrapper">
             <div class="container">
@@ -185,7 +205,7 @@
     <footer>
         <div class="wrapper">
             <div class="logo-p">
-                <a href="#" class="logo">
+                <a href="index.html" class="logo">
                     <svg width="60" height="61" viewBox="0 0 60 61" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <mask id="mask0_2636_232" style="mask-type:luminance" maskUnits="userSpaceOnUse" x="11" y="6"
                             width="38" height="49">
