--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./assets/favicon-colorido.svg" type="image/x-icon">
 </head>
-
-<body onscroll="onScroll()">
+<body>
     <header id="navigationBar" class="">
         <div class="wrapper">
             <div class="logo-name">
@@ -45,14 +43,14 @@
 
             <div class="menu">
                 <ul class="options">
-                    <li><a onclick="closeMenu()" href="index.html">Início</a></li>
+                    <li><a onclick="closeMenu()" href="#home">Início</a></li>
                     <li><a onclick="closeMenu()" href="sobre.html">Sobre</a></li>
                     <li><a onclick="closeMenu()" href="blog.html">Artigos</a></li>
-                    <li><a onclick="closeMenu()" href="#newsletter-ebook">Ebook Grátis</a></li>
+                    <li><a onclick="closeMenu()" href="ebook-newsletter.html">Ebook Grátis</a></li>
                     <li><a onclick="closeMenu()" href="#newsletter-ebook">Newsletter</a></li>
                 </ul>
 
-                <a class="button" onclick="closeMenu()" href="index.html#contato">
+                <a class="button" onclick="closeMenu()" href="#contato">
                     FALE COM O NOSSO TIME
                 </a>
 
@@ -177,38 +175,38 @@
         </div>
     </header>
 
-    <section id="newsletter-ebook" class="newsletter-ebook">
+    <section id="home">
+        <div style="align-items: center;" class="wrapper">
+            <div style="display: flex;
+            flex-direction: column; " id="texts-blog" class="texts">
+        <h1 style="font-size: 6rem;">Em <span>construção</span></h1>
+        <p>Em breve você poderá acompanhar um blog com artigos relevantes e tutoriais sobre Inteligência Artificial.</p>
+        <a style="width: fit-content;" href="index.html#contato" class="button">Economize tempo e dinheiro com IA</a>
+    </div>
+        <img src="./assets/construcao.png" alt="">
+    </div>
+    </section>
+
+    <section id="newsletter-ebook">
         <div class="wrapper">
-            <div style="background: none;" class="container">
-                <div class="texts">
-                    <h2 style="color: var(--gray-headline);">Inscreva-se na nossa <span>Newsletter</span> e ganhe um
-                        <span>eBook</span> grátis</h2>
-                    <p style="color: var(--gray-headline);">Acompanhe como a IA está revolucionando diversos setores e
-                        trazendo impactos significativos para as
-                        empresas.</p>
-                    <form action="" method="get">
-                        <div style="background: linear-gradient(var(--white), var(--white)) padding-box, linear-gradient(to right, var(--primary-blue), var(--primary-green)) border-box;
-                    border: 0.2rem solid transparent;
-                    border-radius: 1rem;" class="input-card">
+            <div class="container">
+                <h2>Inscreva-se na nossa <span>Newsletter</span> e ganhe um <span>eBook</span> grátis</h2>
+                <p>Acompanhe como a IA está revolucionando diversos setores e trazendo impactos significativos para as
+                    empresas.</p>
+                <form action="" method="get">
+                    <div class="cards">
+                        <div class="input-card">
                             <img src="./assets/nome-input-icon.png" alt="">
                             <input type="text" class="input-text" name="nome" id="nome" placeholder="Primeiro Nome">
                         </div>
 
-                        <div style="background: linear-gradient(var(--white), var(--white)) padding-box, linear-gradient(to right, var(--primary-blue), var(--primary-green)) border-box;
-                    border: 0.2rem solid transparent;
-                    border-radius: 1rem;" class="input-card">
+                        <div class="input-card">
                             <img src="./assets/email-input-icon.png" alt="">
                             <input type="email" class="input-text" name="email" id="email" placeholder="Email">
                         </div>
-                        <input type="submit" value="Inscreva-se" id="submit">
-                        <input style="background: var(--gray-headline);" type="submit" value="Baixar apenas eBook"
-                            id="submit">
-                    </form>
-
-                    <p style="color: var(--gray-headline); margin-top: 3rem;">E junte-se a <b>5.000+</b> inscritos</p>
-                </div>
-
-                <img style="margin-top: 3rem;" src="./assets/mockup ebook.png" alt="">
+                    </div>
+                    <input type="submit" value="Inscreva-se" id="submit">
+                </form>
             </div>
         </div>
     </section>
@@ -332,17 +330,5 @@
             <p class="copyright">Copyright © 2023 Inc. Todos os direitos reservados.</p>
         </div>
     </footer>
-
-    <a class="wpp"
-        href="https://api.whatsapp.com/send?phone=5521998376234&text=Ol%C3%A1,%20vim%20do%20site%20e%20tenho%20d%C3%BAvidas."
-        target="_blank">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-            <path fill="#fff"
-                d="M3.516 3.516c4.686-4.686 12.284-4.686 16.97 0 4.686 4.686 4.686 12.283 0 16.97a12.004 12.004 0 0 1-13.754 2.299l-5.814.735a.392.392 0 0 1-.438-.44l.748-5.788A12.002 12.002 0 0 1 3.517 3.517zm3.61 17.043.3.158a9.846 9.846 0 0 0 11.534-1.758c3.843-3.843 3.843-10.074 0-13.918-3.843-3.843-10.075-3.843-13.918 0a9.846 9.846 0 0 0-1.747 11.554l.16.303-.51 3.942a.196.196 0 0 0 .219.22l3.961-.501zm6.534-7.003-.933 1.164a9.843 9.843 0 0 1-3.497-3.495l1.166-.933a.792.792 0 0 0 .23-.94L9.561 6.96a.793.793 0 0 0-.924-.445 1291.6 1291.6 0 0 0-2.023.524.797.797 0 0 0-.588.88 11.754 11.754 0 0 0 10.005 10.005.797.797 0 0 0 .88-.587l.525-2.023a.793.793 0 0 0-.445-.923L14.6 13.327a.792.792 0 0 0-.94.23z" />
-        </svg>
-    </a>
-
-    <script src="main.js"></script>
 </body>
-
 </html>
